[package]
name = "blockchain_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.8.2"
chrono = "0.4.24"
bincode = "1.3.3"
sha256 = "1.1.3"
pretty_env_logger = "0.4.0"
log = "0.4.17"
multiaddr = "0.17.1"
async-trait = "0.1"
either = "1.8"
futures = "0.3.28"
async-std = { version = "1.12", features = [
    "attributes"
] }
serde = { version = "1.0.160", features = [
    "derive"
] }
libp2p = { version = "0.51.2", features = [
    "async-std",
    "gossipsub",
    "dns",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "pnet",
    "tcp",
    "websocket",
    "yamux",
    "mdns",
] }
